--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- NAV -->
+    <nav>
+        <h2>
+            Composite
+        </h2>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#team">Our team</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#faq">FAQ</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <details>
+            <summary class="fa-solid fa-bars"></summary>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#team">Our team</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#faq">FAQ</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul> 
+        </details>
+    </nav>
     <!-- FOOTER -->
     <footer>
         <ul>
