Main:Header is done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- HEADER -->
+    <header>
+        <section>
+            <aside>
+                <h1>Creative Web Design</h1>
+                <h2>WEB DESIGN & CODE YOUR DREAM</h2>
+            </aside>
+            <a href="#">Learn more</a>
+        </section>
+    </header>
     <!-- NAV -->
     <nav>
         <h2>
@@ -26,13 +36,13 @@
         <details>
             <summary class="fa-solid fa-bars"></summary>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#features">Features</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#team">Our team</a></li>
-              <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#faq">FAQ</a></li>
-              <li><a href="#contact">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#team">Our team</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul> 
         </details>
     </nav>
