--- a/index.html
+++ b/index.html
@@ -10,42 +10,63 @@
 </head>
 <body>
     <!-- HEADER -->
+    <!-- NAV -->
+    <nav>
+      <h2>
+        Composite
+      </h2>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#team">Our team</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      <details>
+        <summary class="fa-solid fa-bars"></summary>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#team">Our team</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#faq">FAQ</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul> 
+      </details>
+    </nav>
     <header>
         <section>
             <aside>
                 <h1>Creative Web Design</h1>
                 <h2>WEB DESIGN & CODE YOUR DREAM</h2>
             </aside>
-            <a href="#">Learn more</a>
+            <a href="#">Learn more</a>  
         </section>
     </header>
-    <!-- NAV -->
-    <nav>
-        <h2>
-            Composite
-        </h2>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#team">Our team</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#faq">FAQ</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-        <details>
-            <summary class="fa-solid fa-bars"></summary>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#team">Our team</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#faq">FAQ</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul> 
-        </details>
-    </nav>
+    <!-- MAIN -->
+    <main>
+        <section class="portfolio" id="portfolio">
+            <article>
+                <h3>Portfolio</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, laborum!
+                </p>
+            </article>
+            <figure>
+                <img src="/img/landscape.jpg" alt="Pic-01">
+                <img src="/img/landscape-2.jpg" alt="Pic-02">
+                <img src="/img/landscape-3.jpg" alt="Pic-03">
+                <img src="/img/landscape-4.jpg" alt="Pic-04">
+                <img src="/img/landscape-5.jpg" alt="Pic-05">
+                <img src="/img/landscape-6.jpg" alt="Pic-06">
+                <img src="/img/landscape-7.jpg" alt="Pic-07">
+                <img src="/img/landscape-8.jpg" alt="Pic-08">
+            </figure>
+        </section>
+    </main>
     <!-- FOOTER -->
     <footer>
         <ul>
