Main:Features is done

--- a/index.html
+++ b/index.html
@@ -48,6 +48,44 @@
     </header>
     <!-- MAIN -->
     <main>
+        <section class="features" id="features">
+            <article>
+                <h3>Some Features</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime perspiciatis dicta atque veritatis assumenda iusto?
+                </p>
+            </article>
+            <section>
+                <aside>
+                    <i class="fa-solid fa-laptop"></i>
+                    <h4>Responsive Website</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quam ducimus aperiam quas. Dolores tempore fugit quod aliquam recusandae necessitatibus!
+                    </p>
+                </aside>
+                <aside>
+                    <i class="fa-solid fa-gear"></i>
+                    <h4>Bootstrap 3</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quam ducimus aperiam quas. Dolores tempore fugit quod aliquam recusandae necessitatibus!
+                    </p>
+                </aside>
+                <aside>
+                    <i class="fa-solid fa-a"></i>
+                    <h4>Google Web Fonts</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quam ducimus aperiam quas. Dolores tempore fugit quod aliquam recusandae necessitatibus!
+                    </p>
+                </aside>
+                <aside>
+                    <i class="fa-solid fa-user"></i>
+                    <h4>User Friendly</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quam ducimus aperiam quas. Dolores tempore fugit quod aliquam recusandae necessitatibus!
+                    </p>
+                </aside>
+            </section>
+        </section>
         <section class="portfolio" id="portfolio">
             <article>
                 <h3>Portfolio</h3>
