Main:Team is done

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </header>
     <!-- MAIN -->
     <main>
+        <!-- FEATURES SECTION -->
         <section class="features" id="features">
             <article>
                 <h3>Some Features</h3>
@@ -84,6 +85,81 @@
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quam ducimus aperiam quas. Dolores tempore fugit quod aliquam recusandae necessitatibus!
                     </p>
                 </aside>
+            </section>
+        </section>
+        <!-- TEAM SECTION -->
+        <section class="team" id="team">
+            <article>
+                <h3>Meet the Team</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nostrum accusantium sint eum.
+                </p>
+            </article>
+            <section>
+                <figure>
+                    <img src="/img/landscape-9.jpg" alt="Pic-01">
+                    <figcaption>
+                        <aside>
+                            <h4>Tracy</h4>
+                            <ul>
+                                <li><a href="#" class="fa-brands fa-envelope"></a></li>
+                                <li><a href="#" class="fa-brands fa-linkedin-in"></a></li>
+                                <li><a href="#" class="fa-brands fa-github"></a></li>
+                            </ul>
+                        </aside>
+                        <small>
+                            Designer
+                        </small>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="/img/landscape-9.jpg" alt="Pic-01">
+                    <figcaption>
+                        <aside>
+                            <h4>Mary</h4>
+                            <ul>
+                                <li><a href="#" class="fa-brands fa-envelope"></a></li>
+                                <li><a href="#" class="fa-brands fa-linkedin-in"></a></li>
+                                <li><a href="#" class="fa-brands fa-github"></a></li>
+                            </ul>
+                        </aside>
+                        <small>
+                            Developer
+                        </small>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="/img/landscape-9.jpg" alt="Pic-01">
+                    <figcaption>
+                        <aside>
+                            <h4>Julia</h4>
+                            <ul>
+                                <li><a href="#" class="fa-brands fa-envelope"></a></li>
+                                <li><a href="#" class="fa-brands fa-linkedin-in"></a></li>
+                                <li><a href="#" class="fa-brands fa-github"></a></li>
+                            </ul>
+                        </aside>
+                        <small>
+                            Director
+                        </small>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="/img/landscape-9.jpg" alt="Pic-01">
+                    <figcaption>
+                        <aside>
+                            <h4>Linda</h4>
+                            <ul>
+                                <li><a href="#" class="fa-brands fa-envelope"></a></li>
+                                <li><a href="#" class="fa-brands fa-linkedin-in"></a></li>
+                                <li><a href="#" class="fa-brands fa-github"></a></li>
+                            </ul>
+                        </aside>
+                        <small>
+                            Manager
+                        </small>
+                    </figcaption>
+                </figure>
             </section>
         </section>
         <section class="portfolio" id="portfolio">
