Main:FAQ is done

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         </small>
                     </figcaption>
                 </figure>
-            </section>
+            </section>  
         </section>
         <section class="portfolio" id="portfolio">
             <article>
@@ -181,6 +181,42 @@
             </figure>
         </section>
     </main>
+    <section class="faq" id="faq">
+      <section class="accordion accordion-flush" id="accordionFlushExample">
+          <article class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                How can we get our contract?
+              </button>
+            </h2>
+            <aside id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+              <blockquote class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe fugit quam asperiores debitis consequuntur minima ad ut obcaecati voluptatibus enim?</blockquote>
+            </aside>
+          </article>
+          <article class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                How long does it take to build the first beta project?
+              </button>
+            </h2>
+            <aside id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+              <blockquote class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. In perferendis voluptatum atque, molestiae ab accusamus vel illo eligendi voluptas corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, iste explicabo quasi illo tempora praesentium!</blockquote>
+            </aside>
+          </article>
+          <article class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                  Version Software Control
+              </button>
+            </h2>
+            <aside id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+              <blockquote class="accordion-body">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi veritatis consequatur reprehenderit praesentium fuga! Modi numquam maiores harum animi neque mollitia placeat atque libero quos, dolore ea corporis debitis fuga vero sint delectus cum quibusdam dolor eius reprehenderit voluptatibus rerum. Animi quas suscipit sapiente nihil!
+              </blockquote>
+            </aside>
+          </article>
+      </section>
+    </section>
     <!-- FOOTER -->
     <footer>
         <ul>
@@ -193,5 +229,6 @@
             Copyright &copy; 2084 Your Company Name
         </p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
