--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Creative - WebDesign</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -216,6 +217,50 @@
             </aside>
           </article>
       </section>
+    </section>
+    <!-- CONTACT -->
+    <section class="contact" id="contact">
+          <article>
+              <h3>Contact</h3>
+              <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nisi distinctio modi dolore?
+              </p>
+          </article>
+          <section>
+              <aside>
+                  <h4>Our Address</h4>
+                  <ul>
+                      <li>
+                        <i class="fa-solid fa-phone-flip"></i>
+                        <a href="tel:+0300800380"></a></li>
+                      <li>
+                        <i class="fa-regular fa-envelope"></i>
+                        <a href="mailto:info@company.com"></a>
+                      </li>
+                      <li>
+                        <i class="fa-solid fa-earth-americas"></i>
+                        <a href="#"></a>
+                      </li>
+                      <li>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <address>
+                            360 Aenean Quis Semper, Maecenas 10450
+                        </address>
+                      </li>
+                  </ul>
+              </aside>
+              <article>
+                  <form action="#">
+                      <section>
+                          <input type="text" name="name" id="name" placeholder="Name">
+                          <input type="email" name="email" id="email" placeholder="Email">
+                      </section>
+                      <input type="text" name="subject" id="subject" placeholder="Subject">
+                      <textarea name="message" id="message" placeholder="Message"></textarea>
+                      <input type="submit" value="Send Message">
+                  </form>
+              </article>
+          </section>
     </section>
     <!-- FOOTER -->
     <footer>
