Main: About is done, such as whole HTML

--- a/index.html
+++ b/index.html
@@ -88,6 +88,71 @@
                 </aside>
             </section>
         </section>
+        <!-- ABOUT -->
+        <section class="about" id="about">
+            <article>
+                <h3>
+                    About Us
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores tempore quaerat voluptate tempora.
+                </p>
+            </article>
+            <section>
+                <article>
+                    <aside>
+                        <h3>We are COMPOSITE</h3>
+                        <h4>
+                            Web Design & Development Agency
+                        </h4>
+                    </aside>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe error consequatur aliquid officia magni totam mollitia aliquam facere, tenetur, sint voluptate quas. Placeat debitis similique perspiciatis reiciendis dignissimos asperiores voluptas odio! Cum quas amet reprehenderit!
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed consequatur suscipit quasi exercitationem facilis sequi animi sint ea dolorum pariatur!
+                    </p>
+                </article>
+                <ul class="skills">
+                    <li>
+                        <aside>
+                            <small>HTML5</small>
+                            <small>100%</small>
+                        </aside>
+                        <h6>
+                            <span></span>
+                        </h6>
+                    </li>
+                    <li>
+                        <aside>
+                            <small>CSS3</small>
+                            <small>100%</small>
+                        </aside>
+                        <h6>
+                            <span></span>
+                        </h6>
+                    </li>
+                    <li>
+                        <aside>
+                            <small>JAVASCRIPT</small>
+                            <small>80%</small>
+                        </aside>
+                        <h6>
+                            <span></span>
+                        </h6>
+                    </li>
+                    <li>
+                        <aside>
+                            <small>PHP</small>
+                            <small>90%</small>
+                        </aside>
+                        <h6>
+                            <span></span>
+                        </h6>
+                    </li>                
+                </ul>
+            </section>          
+        </section>
         <!-- TEAM SECTION -->
         <section class="team" id="team">
             <article>
