Mobile: Features CSS is  done

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </article>
             <section>
                 <figure>
-                    <img src="/img/landscape-9.jpg" alt="Pic-01">
+                    <img src="/img/landscape.jpg" alt="Pic-01">
                     <figcaption>
                         <aside>
                             <h4>Tracy</h4>
@@ -179,7 +179,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="/img/landscape-9.jpg" alt="Pic-01">
+                    <img src="/img/landscape-7.jpg" alt="Pic-02">
                     <figcaption>
                         <aside>
                             <h4>Mary</h4>
@@ -195,7 +195,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="/img/landscape-9.jpg" alt="Pic-01">
+                    <img src="/img/landscape-8.jpg" alt="Pic-03">
                     <figcaption>
                         <aside>
                             <h4>Julia</h4>
@@ -211,7 +211,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="/img/landscape-9.jpg" alt="Pic-01">
+                    <img src="/img/landscape-9.jpg" alt="Pic-04">
                     <figcaption>
                         <aside>
                             <h4>Linda</h4>
@@ -248,6 +248,14 @@
         </section>
     </main>
     <section class="faq" id="faq">
+      <article>
+          <h3>
+              FAQ
+          </h3>
+          <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis veritatis aliquid sequi!
+          </p>
+      </article>
       <section class="accordion accordion-flush" id="accordionFlushExample">
           <article class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
