--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
     <!-- CONTACT -->
     <section class="contact" id="contact">
           <article>
-              <h3>Contact</h3>
+              <h3>Contact Us</h3>
               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nisi distinctio modi dolore?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ducimus blanditiis laudantium labore aspernatur dolor ullam, eos facere?
               </p>
           </article>
           <section>
@@ -305,20 +305,20 @@
                   <ul>
                       <li>
                         <i class="fa-solid fa-phone-flip"></i>
-                        <a href="tel:+0300800380"></a></li>
+                        <a href="tel:0800800380">+0300800380</a></li>
                       <li>
                         <i class="fa-regular fa-envelope"></i>
-                        <a href="mailto:info@company.com"></a>
+                        <a href="mailto:info@company.com">info@company.com</a>
                       </li>
                       <li>
                         <i class="fa-solid fa-earth-americas"></i>
-                        <a href="#"></a>
+                        <a href="#">http://www.company.com</a>
                       </li>
                       <li>
-                        <i class="fa-solid fa-location-dot"></i>
-                        <address>
-                            360 Aenean Quis Semper, Maecenas 10450
-                        </address>
+                          <i class="fa-solid fa-location-dot"></i>
+                          <address>
+                              360 Aenean Quis Semper, Maecenas 10450
+                          </address>
                       </li>
                   </ul>
               </aside>
