Mobile: Portfolio is done

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <article>
                 <h3>Portfolio</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, laborum!
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi repudiandae exercitationem voluptate asperiores quia quaerat eligendi suscipit accusantium expedita.
                 </p>
             </article>
             <figure>
